--- a/package.json
+++ b/package.json
@@ -12,6 +12,20 @@
     "README.md"
   ],
   "dependencies": {
-    "@vapnik/jigsaw": "0.0.1-alpha6"
+    "@vapnik/jigsaw": "0.0.1-alpha6",
+    "typescript": "5.5.4"
+  },
+  "devDependencies": {
+    "@types/jest": "29.5.12",
+    "copyfiles": "^2.4.1",
+    "jest": "29.7.0",
+    "ts-jest": "29.2.3"
+  },
+  "scripts": {
+    "build": "tsc & npm run copy-dts",
+    "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist",
+    "release": "npm run build & npm publish",
+    "run": "ts-node ./src/index.ts",
+    "test": "jest"
   }
 }
