--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
   "name": "@vapnik/jigsaw-service-ee",
-  "description": "Simple event-emitter service for JigSaw",
   "version": "0.0.1-alpha1",
-  "license": "MIT",
   "author": "Vladislav Vapnik <vladislavvapnik@gmail.com>",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@vapnik/jigsaw": "0.0.1-alpha6",
+    "typescript": "5.5.4"
+  },
+  "description": "Simple event-emitter service for JigSaw",
+  "devDependencies": {
+    "@types/jest": "29.5.12",
+    "copyfiles": "^2.4.1",
+    "jest": "29.7.0",
+    "ts-jest": "29.2.3",
+    "ts-node": "10.9.2"
+  },
   "files": [
     "dist",
     "package.json",
     "README.md"
   ],
-  "dependencies": {
-    "@vapnik/jigsaw": "0.0.1-alpha6",
-    "typescript": "5.5.4"
-  },
-  "devDependencies": {
-    "@types/jest": "29.5.12",
-    "copyfiles": "^2.4.1",
-    "jest": "29.7.0",
-    "ts-jest": "29.2.3"
-  },
+  "license": "MIT",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc & npm run copy-dts",
     "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist",
     "release": "npm run build & npm publish",
     "run": "ts-node ./src/index.ts",
     "test": "jest"
-  }
+  },
+  "types": "dist/index.d.ts"
 }
